# PiVideo

./: .gitignore  DEVELOPER.md  LICENSE  Makefile  README.md  SETUP.md  os_list.json
.github/workflows/: daemon.yml  release.yml  web.yml
daemon/: Cargo.toml
daemon/src/: main.rs
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/bookworm/: InRelease  Release  Release.gpg
dists/bookworm/main/binary-arm64/: Packages  Release
enclosure/: serlcd_esp32_case.scad  serlcd_esp32_case.stl
image/: config.env.example
image/config/: packages.txt
image/rootfs-overlay/etc/apt/apt.conf.d/: 50unattended-upgrades
image/rootfs-overlay/etc/apt/sources.list.d/: pivideo.list
image/rootfs-overlay/etc/apt/trusted.gpg.d/: pivideo.asc
image/rootfs-overlay/etc/ssh/sshd_config.d/: 10-pivideo.conf
image/rootfs-overlay/etc/systemd/system/: pivideo-firstrun.service  pivideo-web.service  pivideo.service
image/scripts/: build.sh  run-pigen.sh
image/stage-pivideo/: 00-packages  01-run.sh
image/stage-pivideo/00-pivideo/: 01-run-nochroot.sh
package/DEBIAN/: control  postinst  prerm
pool/main/p/pivideo/: pivideo_1.0.0_arm64.deb  pivideo_1.0.1_arm64.deb  pivideo_1.0.2_arm64.deb  pivideo_1.0.3_arm64.deb  pivideo_1.0.4_arm64.deb  pivideo_1.0.5_arm64.deb
reprepro/conf/: distributions
scripts/: gen-signing-key.sh
web/: server.py  test_server.py
