[package]
name = "pivideo-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pivideo-daemon"
path = "src/main.rs"

[dependencies]
rppal = "0.18"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "z"
